--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Serfers</title>
 	<link rel="stylesheet" href="../build/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<p>Тест</p>
