--- a/index.html
+++ b/index.html
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Serfers</title>
-	<link rel="stylesheet" href="../build/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Serfers</title>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../build/css/style.css">
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
 </head>
+
 <body>
-	<p>Тест</p>
+  <h1 class="v-hidden">First Sirfing Magazine</h1>
+  <header class="header">
+    <div class="container">
+      <div class="nav-wrap">
+        <div class="logo">
+          <a class="logo__link" href="index.html">
+            <img src="./build/img/logo/logo.svg" width="" height="" alt="Serfers' Logo">
+          </a>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-menu">
+            <li class="main-menu__item">
+              <a href="#">
+                Stories
+              </a>
+            </li>
+            <li class="main-menu__item">
+              <a href="#">
+                Events
+              </a>
+            </li>
+            <li class="main-menu__item">
+              <a href="#">
+                Places
+              </a>
+            </li>
+            <li class="main-menu__item">
+              <a href="#">
+                Boards
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- Слайдер -->
+      <section class="promo">
+        <h2 class="v-hidden">Промо-слайдер</h2>
+        
+      </section>
+      <!--Текст сбоку -->
+      <!-- Соц. кнопки -->
+      <ul class="social">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Tumbler</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13" height="21" viewBox="0 0 13 21"><path id="py0ta" d="M1386.06 580v4.72h4.69v3.56h-4.69v4.743s-.312 3.374 1.96 3.551c0 0 2.605.186 3.53-1.184v3.552s-2.223 1.199-4.314 1.199c-2.092 0-5.45-1.043-5.492-5.146v-6.708h-2.353v-3.157s3.687-.4 4.315-5.13z"/><g><g transform="translate(-1379 -580)"><use fill="#ebebeb" xlink:href="#py0ta"/></g></g></svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Twitter</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="15" viewBox="0 0 19 15"><defs><path id="7mlua" d="M1392.511 635.524l1.847-.369s-1.547 1.75-1.847 1.845c-.003.001-.006-.002-.009-.002-.04.853.01 1.109.01 1.109-3.53 15.21-16.52 8.486-16.52 8.486 4.727.125 5.148-1.845 5.148-1.845-2.768-.42-3.301-2.213-3.301-2.213.94.43 1.467-.37 1.467-.37-2.987-.776-2.568-3.69-2.568-3.69.5.46 1.315.634 1.8.7-.337-.394-3.125-3.756-1.433-5.495 0 0 2.036 3.682 7.428 4.035l.36-.09a3.91 3.91 0 0 1-.085-.81c0-2.139 1.725-3.874 3.852-3.874 2.564 0 3.118 1.476 3.118 1.476l1.834-1.107s-.201 1.85-1.1 2.214z"/></defs><g><g transform="translate(-1376 -633)"><use fill="#ebebeb" xlink:href="#7mlua"/></g></g></svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Vimeo</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="16" viewBox="0 0 19 16"><defs><path id="a6m7a" d="M1387.21 686.813c-.008.457.568.104 1.101.369s1.594.567.734 2.951c0 0-1.203 3.594-2.201 3.32 0 0-1.55.063-1.834-3.32-.285-3.383-.863-6.817-2.568-6.641-1.704.176-4.178 1.842-5.857 4.058 0 0 .463 1.158 1.089 1.107.625-.05.586-.96 1.1-.738.514.224 1.31.187 1.834 3.32.525 3.135 1.307 4.784 2.201 6.273.894 1.49 1.802 1.49 2.568 1.49.765 0 3.22-1.778 5.502-4.81 2.282-3.033 4.044-6.688 4.044-7.38 0-.691.646-3.24-1.843-3.689-2.49-.45-5.836 2.065-5.87 3.69z"/></defs><g><g transform="translate(-1376 -683)"><use fill="#ebebeb" xlink:href="#a6m7a"/></g></g></svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <main class="main">
+    <div class="container">
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container">
+    </div>
+  </footer>
 </body>
+
 </html>
