Добавляет разметку хtдера 2

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
   <h1 class="v-hidden">First Sirfing Magazine</h1>
   <header class="header">
     <div class="container">
+      <!-- Обёртка блока навигации -->
       <div class="nav-wrap">
+        <!-- Logo -->
         <div class="logo">
           <a class="logo__link" href="index.html">
             <img src="./build/img/logo/logo.svg" width="" height="" alt="Serfers' Logo">
           </a>
         </div>
+        <!-- Menu -->
         <nav class="main-nav">
           <ul class="main-menu">
             <li class="main-menu__item">
@@ -48,11 +51,33 @@
             </li>
           </ul>
         </nav>
+        <p class="site-name">
+          First Sirfing Magazine
+        </p>
       </div>
       <!-- Слайдер -->
       <section class="promo">
         <h2 class="v-hidden">Промо-слайдер</h2>
-        
+        <div class="slider">
+          <ul class="slider__list">
+            <li class="slider__item slide slide--1 slide--active">
+              <!-- Текстовый блок слайда -->
+              <div class="slide__info">
+                <span class="slide__text">Your</span>
+                <h3 class="slide__title">
+                  Beautiful Escape
+                </h3>
+                <p class="slide__desc">
+                  One of the greatest things about the sport of surfing is that you need only three things: your body, a surfboard, and a wave.
+                </p>
+              </div>
+              <!-- Изображение -->
+              <p class="slide__img img-wrap">
+                <img src="#" width="" height="" alt="Изображение первого слайда">
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Текст сбоку -->
       <!-- Соц. кнопки -->
