--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-  <h1 class="v-hidden">First Sirfing Magazine</h1>
+  <h1 class="v-hidden">First Surfing Magazine</h1>
+  <!-- HEADER -->
   <header class="header">
     <div class="container">
       <!-- Обёртка блока навигации -->
@@ -52,13 +53,15 @@
           </ul>
         </nav>
         <p class="site-name">
-          First Sirfing Magazine
+          First Surfing Magazine
         </p>
       </div>
+    </div>
+    <div class="container">
       <!-- Слайдер -->
       <section class="promo">
         <h2 class="v-hidden">Промо-слайдер</h2>
-        <div class="slider">
+        <div class="slider promo__slider">
           <ul class="slider__list">
             <li class="slider__item slide slide--1 slide--active">
               <!-- Текстовый блок слайда -->
@@ -77,6 +80,37 @@
               </p>
             </li>
           </ul>
+          <div class="controls">
+            <button class="btn controls__btn controls__btn--prev" type="button">
+              <span class="v-hidden">Previous</span>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="18" viewBox="0 0 10 18">
+                <defs>
+                  <path id="1hafa" d="M108.155 686.64l8.951-8.49c.211-.2.55-.2.76 0 .21.2.21.52 0 .72l-8.57 8.129 8.57 8.13c.21.199.21.52 0 .72a.556.556 0 0 1-.378.15.54.54 0 0 1-.378-.15l-8.951-8.492a.489.489 0 0 1-.004-.717z" />
+                </defs>
+                <g>
+                  <g transform="translate(-108 -678)">
+                    <use fill="#ebebeb" xlink:href="#1hafa" />
+                  </g>
+                </g>
+              </svg>
+            </button>
+            <span class="controls__num controls__num--curr">1</span>
+            <span class="controls__devider">/</span>
+            <span class="controls__num controls__num--all">5</span>
+            <button class="btn controls__btn controls__btn--next" type="button">
+              <span class="v-hidden">Next</span>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="18" viewBox="0 0 10 18">
+                <defs>
+                  <path id="y87ka" d="M188.846 686.64l-8.924-8.49a.553.553 0 0 0-.757 0 .49.49 0 0 0 0 .72l8.543 8.129-8.543 8.13a.49.49 0 0 0 0 .72c.103.098.242.15.376.15.135 0 .274-.049.377-.15l8.924-8.492a.49.49 0 0 0 .004-.717z" />
+                </defs>
+                <g>
+                  <g transform="translate(-179 -678)">
+                    <use fill="#ebebeb" xlink:href="#y87ka" />
+                  </g>
+                </g>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
       <!--Текст сбоку -->
@@ -85,30 +119,305 @@
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="v-hidden">Tumbler</span>
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13" height="21" viewBox="0 0 13 21"><path id="py0ta" d="M1386.06 580v4.72h4.69v3.56h-4.69v4.743s-.312 3.374 1.96 3.551c0 0 2.605.186 3.53-1.184v3.552s-2.223 1.199-4.314 1.199c-2.092 0-5.45-1.043-5.492-5.146v-6.708h-2.353v-3.157s3.687-.4 4.315-5.13z"/><g><g transform="translate(-1379 -580)"><use fill="#ebebeb" xlink:href="#py0ta"/></g></g></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13" height="21" viewBox="0 0 13 21">
+              <path id="py0ta" d="M1386.06 580v4.72h4.69v3.56h-4.69v4.743s-.312 3.374 1.96 3.551c0 0 2.605.186 3.53-1.184v3.552s-2.223 1.199-4.314 1.199c-2.092 0-5.45-1.043-5.492-5.146v-6.708h-2.353v-3.157s3.687-.4 4.315-5.13z" />
+              <g>
+                <g transform="translate(-1379 -580)">
+                  <use fill="#ebebeb" xlink:href="#py0ta" />
+                </g>
+              </g>
+            </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="v-hidden">Twitter</span>
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="15" viewBox="0 0 19 15"><defs><path id="7mlua" d="M1392.511 635.524l1.847-.369s-1.547 1.75-1.847 1.845c-.003.001-.006-.002-.009-.002-.04.853.01 1.109.01 1.109-3.53 15.21-16.52 8.486-16.52 8.486 4.727.125 5.148-1.845 5.148-1.845-2.768-.42-3.301-2.213-3.301-2.213.94.43 1.467-.37 1.467-.37-2.987-.776-2.568-3.69-2.568-3.69.5.46 1.315.634 1.8.7-.337-.394-3.125-3.756-1.433-5.495 0 0 2.036 3.682 7.428 4.035l.36-.09a3.91 3.91 0 0 1-.085-.81c0-2.139 1.725-3.874 3.852-3.874 2.564 0 3.118 1.476 3.118 1.476l1.834-1.107s-.201 1.85-1.1 2.214z"/></defs><g><g transform="translate(-1376 -633)"><use fill="#ebebeb" xlink:href="#7mlua"/></g></g></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="15" viewBox="0 0 19 15">
+              <defs>
+                <path id="7mlua" d="M1392.511 635.524l1.847-.369s-1.547 1.75-1.847 1.845c-.003.001-.006-.002-.009-.002-.04.853.01 1.109.01 1.109-3.53 15.21-16.52 8.486-16.52 8.486 4.727.125 5.148-1.845 5.148-1.845-2.768-.42-3.301-2.213-3.301-2.213.94.43 1.467-.37 1.467-.37-2.987-.776-2.568-3.69-2.568-3.69.5.46 1.315.634 1.8.7-.337-.394-3.125-3.756-1.433-5.495 0 0 2.036 3.682 7.428 4.035l.36-.09a3.91 3.91 0 0 1-.085-.81c0-2.139 1.725-3.874 3.852-3.874 2.564 0 3.118 1.476 3.118 1.476l1.834-1.107s-.201 1.85-1.1 2.214z" />
+              </defs>
+              <g>
+                <g transform="translate(-1376 -633)">
+                  <use fill="#ebebeb" xlink:href="#7mlua" />
+                </g>
+              </g>
+            </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="v-hidden">Vimeo</span>
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="16" viewBox="0 0 19 16"><defs><path id="a6m7a" d="M1387.21 686.813c-.008.457.568.104 1.101.369s1.594.567.734 2.951c0 0-1.203 3.594-2.201 3.32 0 0-1.55.063-1.834-3.32-.285-3.383-.863-6.817-2.568-6.641-1.704.176-4.178 1.842-5.857 4.058 0 0 .463 1.158 1.089 1.107.625-.05.586-.96 1.1-.738.514.224 1.31.187 1.834 3.32.525 3.135 1.307 4.784 2.201 6.273.894 1.49 1.802 1.49 2.568 1.49.765 0 3.22-1.778 5.502-4.81 2.282-3.033 4.044-6.688 4.044-7.38 0-.691.646-3.24-1.843-3.689-2.49-.45-5.836 2.065-5.87 3.69z"/></defs><g><g transform="translate(-1376 -683)"><use fill="#ebebeb" xlink:href="#a6m7a"/></g></g></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="16" viewBox="0 0 19 16">
+              <defs>
+                <path id="a6m7a" d="M1387.21 686.813c-.008.457.568.104 1.101.369s1.594.567.734 2.951c0 0-1.203 3.594-2.201 3.32 0 0-1.55.063-1.834-3.32-.285-3.383-.863-6.817-2.568-6.641-1.704.176-4.178 1.842-5.857 4.058 0 0 .463 1.158 1.089 1.107.625-.05.586-.96 1.1-.738.514.224 1.31.187 1.834 3.32.525 3.135 1.307 4.784 2.201 6.273.894 1.49 1.802 1.49 2.568 1.49.765 0 3.22-1.778 5.502-4.81 2.282-3.033 4.044-6.688 4.044-7.38 0-.691.646-3.24-1.843-3.689-2.49-.45-5.836 2.065-5.87 3.69z" />
+              </defs>
+              <g>
+                <g transform="translate(-1376 -683)">
+                  <use fill="#ebebeb" xlink:href="#a6m7a" />
+                </g>
+              </g>
+            </svg>
           </a>
         </li>
       </ul>
     </div>
   </header>
+  <!-- MAIN -->
   <main class="main">
-    <div class="container">
-    </div>
+    <!-- Quote -->
+    <section class="quote">
+      <div class="container">
+        <h2 class="v-hidden">Quotation</h2>
+        <blockquote class="quote__text">
+          Surfing is the most blissful experience you can have on this planet, a taste of heaven.
+        </blockquote>
+        <p class="quote__author">
+          John McCarthy
+        </p>
+      </div>
+    </section>
+    <!-- Surfing -->
+    <section class="surfing">
+      <div class="container">
+        <h2 class="v-hidden">About surfing</h2>
+        <div class="surfing__info">
+          <p class="img-wrap surfing__img">
+            <img src="#" width="" height="" alt="Surfing image">
+          </p>
+          <p class="surfing__desc">
+            By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
+          </p>
+          <a class="btn btn--link surfing__link" href="#">Read more</a>
+        </div>
+        <div class="surfing__video">
+          <video class="video" src="./build/img/img/img-3.jpg" width="706" height="549" poster="#" controls="controls" preload>
+            Тег video не поддерживается вашим браузером.
+          </video>
+          <button class="btn btn--play">
+            <span class="v-hidden">Play video</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="17" viewBox="0 0 14 17">
+              <defs>
+                <path id="iwnqa" d="M986.71 1529.473l-13.362 7.714v-15.428z" />
+              </defs>
+              <g>
+                <g transform="translate(-973 -1521)">
+                  <use fill="#fff" xlink:href="#iwnqa" />
+                </g>
+              </g>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- Shop -->
+    <section class="shop">
+      <div class="container">
+        <span class="shop__suptitle"></span>
+        <h2 class="shop__title">Surfboards</h2>
+        <div class="slider shop__slider">
+          <ul class="slider__list">
+            <!-- 1st -->
+            <li class="slider__item product product--1">
+              <!-- Block with image -->
+              <p class="product__img img-wrap">
+                <img src="#" width="" height="" alt="Surfboard image">
+              </p>
+              <!-- Text block -->
+              <div class="product__info">
+                <span class="product__category">Funboards</span>
+                <h3 class="product__title">Chilli Rare Bird</h3>
+                <span class="product__price">$890</span>
+                <a class="btn btn--buy product__buy" href="#">Buy</a>
+              </div>
+            </li>
+            <!-- 2nd -->
+            <li class="slider__item product product--2">
+              <!-- Block with image -->
+              <p class="product__img img-wrap">
+                <img src="#" width="" height="" alt="Surfboard image">
+              </p>
+              <!-- Text block -->
+              <div class="product__info">
+                <span class="product__category">Surfboards</span>
+                <h3 class="product__title">Emery NEM XF</h3>
+                <span class="product__price">$950</span>
+                <a class="btn btn--buy product__buy" href="#">Buy</a>
+              </div>
+            </li>
+            <!-- 3st -->
+            <li class="slider__item product product--3">
+              <!-- Block with image -->
+              <p class="product__img img-wrap">
+                <img src="#" width="" height="" alt="Surfboard image">
+              </p>
+              <!-- Text block -->
+              <div class="product__info">
+                <span class="product__category">Funboards</span>
+                <h3 class="product__title">Agency GROM</h3>
+                <span class="product__price">$670</span>
+                <a class="btn btn--buy product__buy" href="#">Buy</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <a class="btn btn--link shop__link" href="#">Show all</a>
+      </div>
+    </section>
+    <!-- Articles -->
+    <section class="articles">
+      <div class="container">
+        <h2 class="v-hidden">Blog Articles</h2>
+        <!-- 1st article -->
+        <article class="article article--training">
+          <div class="article__preview">
+            <h3 class="article__title">SurfTraining</h3>
+            <p class="article__text">
+              By better understanding the various aspects of surfing, By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
+            </p>
+            <a class="btn btn--link article__link" href="#">Read more</a>
+          </div>
+          <p class="img-wrap article__img">
+            <img src="#" width="" height="" alt="Article image">
+          </p>
+        </article>
+        <!-- 2nd article -->
+        <article class="article article--turned article--point">
+          <p class="img-wrap article__img">
+            <img src="#" width="" height="" alt="Point Break image">
+          </p>
+          <div class="article__preview">
+            <h3 class="article__title">Point Break</h3>
+            <p class="article__text">
+              By better understanding the various aspects of By better understanding the various aspects of surfing, By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
+            </p>
+            <a class="btn btn--link article__link" href="#">Read more</a>
+          </div>
+        </article>
+      </div>
+    </section>
+    <!-- Join the Club -->
+    <section class="subscribe">
+      <div class="container">
+        <h2 class="subscribe__title">Join the Club</h2>
+        <p class="subscribe__desc">
+          By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
+        </p>
+        <form class="form subscribe__form" name="subscribe-form" action="#" method="post">
+          <p class="form__group">
+            <input class="form__input" name="email" id="email" type="email" value="" placeholder="Your e-mail">
+            <button class="btn btn--submit subscribe__submit" type="submit">
+              <span class="v-hidden">Send</span>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="18" viewBox="0 0 10 18">
+                <defs>
+                  <path id="il7fa" d="M994.845 4259.64l-8.923-8.49a.552.552 0 0 0-.757 0 .49.49 0 0 0 0 .72l8.543 8.13-8.543 8.128a.49.49 0 0 0 0 .72.552.552 0 0 0 .376.152c.135 0 .274-.05.377-.152l8.924-8.49a.49.49 0 0 0 .004-.718z" />
+                </defs>
+                <g>
+                  <g transform="translate(-985 -4251)">
+                    <use fill="#fff" xlink:href="#il7fa" />
+                  </g>
+                </g>
+              </svg>
+            </button>
+          </p>
+        </form>
+      </div>
+    </section>
+    <!-- Camp -->
+    <section class="camp">
+      <div class="container">
+        <h2 class="v-hidden">Our Camp</h2>
+        <!-- Изображение -->
+        <p class="img-wrap camp__img">
+          <img src="#" width="" height="" alt="Our camp image">
+        </p>
+        <div class="camp__desc">
+          <span class="camp__text">Our camp</span>
+          <h2 class="camp__title">CA 91932, USA Imperial Beach 560 Silver Strand Blvd</h2>
+          <a class="camp__link" href="#">Get in touch</a>
+        </div>
+      </div>
+    </section>
   </main>
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
+      <!-- Logo -->
+      <div class="logo">
+        <a class="logo__link" href="index.html">
+          <img src="./build/img/logo/logo.svg" width="" height="" alt="Serfers' Logo">
+        </a>
+      </div>
+      <!-- Menu -->
+      <nav class="main-nav">
+        <ul class="main-menu">
+          <li class="main-menu__item">
+            <a href="#">
+              Stories
+            </a>
+          </li>
+          <li class="main-menu__item">
+            <a href="#">
+              Events
+            </a>
+          </li>
+          <li class="main-menu__item">
+            <a href="#">
+              Places
+            </a>
+          </li>
+          <li class="main-menu__item">
+            <a href="#">
+              Boards
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <!-- Socials -->
+      <ul class="social">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Tumbler</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13" height="21" viewBox="0 0 13 21">
+              <path id="py0ta" d="M1386.06 580v4.72h4.69v3.56h-4.69v4.743s-.312 3.374 1.96 3.551c0 0 2.605.186 3.53-1.184v3.552s-2.223 1.199-4.314 1.199c-2.092 0-5.45-1.043-5.492-5.146v-6.708h-2.353v-3.157s3.687-.4 4.315-5.13z" />
+              <g>
+                <g transform="translate(-1379 -580)">
+                  <use fill="#ebebeb" xlink:href="#py0ta" />
+                </g>
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Twitter</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="15" viewBox="0 0 19 15">
+              <defs>
+                <path id="7mlua" d="M1392.511 635.524l1.847-.369s-1.547 1.75-1.847 1.845c-.003.001-.006-.002-.009-.002-.04.853.01 1.109.01 1.109-3.53 15.21-16.52 8.486-16.52 8.486 4.727.125 5.148-1.845 5.148-1.845-2.768-.42-3.301-2.213-3.301-2.213.94.43 1.467-.37 1.467-.37-2.987-.776-2.568-3.69-2.568-3.69.5.46 1.315.634 1.8.7-.337-.394-3.125-3.756-1.433-5.495 0 0 2.036 3.682 7.428 4.035l.36-.09a3.91 3.91 0 0 1-.085-.81c0-2.139 1.725-3.874 3.852-3.874 2.564 0 3.118 1.476 3.118 1.476l1.834-1.107s-.201 1.85-1.1 2.214z" />
+              </defs>
+              <g>
+                <g transform="translate(-1376 -633)">
+                  <use fill="#ebebeb" xlink:href="#7mlua" />
+                </g>
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Vimeo</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="16" viewBox="0 0 19 16">
+              <defs>
+                <path id="a6m7a" d="M1387.21 686.813c-.008.457.568.104 1.101.369s1.594.567.734 2.951c0 0-1.203 3.594-2.201 3.32 0 0-1.55.063-1.834-3.32-.285-3.383-.863-6.817-2.568-6.641-1.704.176-4.178 1.842-5.857 4.058 0 0 .463 1.158 1.089 1.107.625-.05.586-.96 1.1-.738.514.224 1.31.187 1.834 3.32.525 3.135 1.307 4.784 2.201 6.273.894 1.49 1.802 1.49 2.568 1.49.765 0 3.22-1.778 5.502-4.81 2.282-3.033 4.044-6.688 4.044-7.38 0-.691.646-3.24-1.843-3.689-2.49-.45-5.836 2.065-5.87 3.69z" />
+              </defs>
+              <g>
+                <g transform="translate(-1376 -683)">
+                  <use fill="#ebebeb" xlink:href="#a6m7a" />
+                </g>
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </footer>
 </body>
