--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </div>
               <!-- Изображение -->
               <p class="slide__img img-wrap">
-                <img src="#" width="" height="" alt="Изображение первого слайда">
+                <img src="./build/img/img/img-header.jpg" width="1016" height="572" alt="Изображение первого слайда">
               </p>
             </li>
           </ul>
@@ -96,7 +96,7 @@
             </button>
             <span class="controls__num controls__num--curr">1</span>
             <span class="controls__devider">/</span>
-            <span class="controls__num controls__num--all">5</span>
+            <span class="controls__num">5</span>
             <button class="btn controls__btn controls__btn--next" type="button">
               <span class="v-hidden">Next</span>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="18" viewBox="0 0 10 18">
@@ -182,7 +182,7 @@
         <h2 class="v-hidden">About surfing</h2>
         <div class="surfing__info">
           <p class="img-wrap surfing__img">
-            <img src="#" width="" height="" alt="Surfing image">
+            <img src="./build/img/img/img-2.jpg" width="613" height="370" alt="Surfing image">
           </p>
           <p class="surfing__desc">
             By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
@@ -193,6 +193,9 @@
           <video class="video" src="./build/img/img/img-3.jpg" width="706" height="549" poster="#" controls="controls" preload>
             Тег video не поддерживается вашим браузером.
           </video>
+          <p class="img-wrap surfing__video-poster">
+            <img src="./build/img/img/img-3.jpg" alt="Video Poster">
+          </p>
           <button class="btn btn--play">
             <span class="v-hidden">Play video</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="17" viewBox="0 0 14 17">
@@ -220,7 +223,7 @@
             <li class="slider__item product product--1">
               <!-- Block with image -->
               <p class="product__img img-wrap">
-                <img src="#" width="" height="" alt="Surfboard image">
+                <img src="./build/img/boards/board-1.png" width="226" height="493" alt="Surfboard image 1">
               </p>
               <!-- Text block -->
               <div class="product__info">
@@ -234,7 +237,7 @@
             <li class="slider__item product product--2">
               <!-- Block with image -->
               <p class="product__img img-wrap">
-                <img src="#" width="" height="" alt="Surfboard image">
+                <img src="./build/img/boards/board-2.png" width="226" height="500" alt="Surfboard image 2">
               </p>
               <!-- Text block -->
               <div class="product__info">
@@ -248,7 +251,7 @@
             <li class="slider__item product product--3">
               <!-- Block with image -->
               <p class="product__img img-wrap">
-                <img src="#" width="" height="" alt="Surfboard image">
+                <img src="./build/img/boards/board-2.png" width="224" height="510" alt="Surfboard image">
               </p>
               <!-- Text block -->
               <div class="product__info">
@@ -277,13 +280,13 @@
             <a class="btn btn--link article__link" href="#">Read more</a>
           </div>
           <p class="img-wrap article__img">
-            <img src="#" width="" height="" alt="Article image">
+            <img src="./build/img/img/img-4.jpg" width="762" height="439" alt="Article image">
           </p>
         </article>
         <!-- 2nd article -->
         <article class="article article--turned article--point">
           <p class="img-wrap article__img">
-            <img src="#" width="" height="" alt="Point Break image">
+            <img src="./build/img/img/img-5.jpg" width="489" height="439" alt="Point Break image">
           </p>
           <div class="article__preview">
             <h3 class="article__title">Point Break</h3>
@@ -328,7 +331,7 @@
         <h2 class="v-hidden">Our Camp</h2>
         <!-- Изображение -->
         <p class="img-wrap camp__img">
-          <img src="#" width="" height="" alt="Our camp image">
+          <img src="./build/img/img/img-6.jpg" width="720" height="475" alt="Our camp image">
         </p>
         <div class="camp__desc">
           <span class="camp__text">Our camp</span>
