Добавляет стили шрифтов элементам страницы

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <!-- Shop -->
     <section class="shop">
       <div class="container">
-        <span class="shop__suptitle"></span>
+        <span class="shop__suptitle">Shop</span>
         <h2 class="shop__title">Surfboards</h2>
         <div class="slider shop__slider">
           <ul class="slider__list">
@@ -251,7 +251,7 @@
             <li class="slider__item product product--3">
               <!-- Block with image -->
               <p class="product__img img-wrap">
-                <img src="./build/img/boards/board-2.png" width="224" height="510" alt="Surfboard image">
+                <img src="./build/img/boards/board-3.png" width="224" height="510" alt="Surfboard image">
               </p>
               <!-- Text block -->
               <div class="product__info">
