--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
           <img src="./build/img/img/img-6.jpg" width="720" height="475" alt="Our camp image">
         </p>
         <div class="camp__desc">
-          <span class="camp__text">Our camp</span>
+          <span class="camp__suptitle">Our camp</span>
           <h2 class="camp__title">CA 91932, USA Imperial Beach 560 Silver Strand Blvd</h2>
-          <a class="camp__link" href="#">Get in touch</a>
+          <a class="btn btn--link camp__link" href="#">Get in touch</a>
         </div>
       </div>
     </section>
