Стилизация блока Camp

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
       </nav>
       <!-- Socials -->
       <ul class="social">
-        <li class="social__item">
+        <li class="social__item" title="Tumbler">
           <a class="social__link" href="#">
             <span class="v-hidden">Tumbler</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13" height="21" viewBox="0 0 13 21">
@@ -392,7 +392,7 @@
             </svg>
           </a>
         </li>
-        <li class="social__item">
+        <li class="social__item" title="Twitter">
           <a class="social__link" href="#">
             <span class="v-hidden">Twitter</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="15" viewBox="0 0 19 15">
@@ -407,7 +407,7 @@
             </svg>
           </a>
         </li>
-        <li class="social__item">
+        <li class="social__item" title="Vimeo">
           <a class="social__link" href="#">
             <span class="v-hidden">Vimeo</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19" height="16" viewBox="0 0 19 16">
