Добавляет стили блока Surfing

--- a/index.html
+++ b/index.html
@@ -181,15 +181,19 @@
     <section class="surfing">
       <div class="container">
         <h2 class="v-hidden">About surfing</h2>
+        <!-- Left block -->
         <div class="surfing__info">
           <p class="img-wrap surfing__img">
             <img src="./build/img/img/img-2.jpg" width="613" height="370" alt="Surfing image">
           </p>
-          <p class="surfing__desc">
-            By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
-          </p>
-          <a class="btn btn--link surfing__link" href="#">Read more</a>
+          <div class="surfing__info-wrap">
+            <p class="surfing__desc">
+              By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
+            </p>
+            <a class="btn btn--link surfing__link" href="#">Read more</a>
+          </div>
         </div>
+        <!-- Right block -->
         <div class="surfing__video">
           <video class="video" src="./build/img/img/img-3.jpg" width="706" height="549" poster="#" controls="controls" preload>
             Тег video не поддерживается вашим браузером.
