Добавляет стили блока Shop

--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
             </li>
           </ul>
         </div>
-        <a class="btn btn--link shop__link" href="#">Show all</a>
+        <div class="shop__link-wrap">
+          <a class="btn btn--link shop__link" href="#">Show all</a>
+        </div>
       </div>
     </section>
     <!-- Articles -->
