--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
           </div>
         </div>
       </section>
-      <!--Текст сбоку -->
-      <!-- Соц. кнопки -->
+      <!-- Socials -->
       <ul class="social">
         <li class="social__item">
           <a class="social__link" href="#">
