Локально подключает League Spartan

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
       <!-- Слайдер -->
       <section class="promo">
-        <h2 class="v-hidden">Промо-слайдер</h2>
+        <h2 class="v-hidden">Promo Slider</h2>
         <div class="slider promo__slider">
           <ul class="slider__list">
             <li class="slider__item slide slide--1 slide--active">
