--- a/index.html
+++ b/index.html
@@ -283,14 +283,16 @@
             </li>
           </ul>
           <!-- Shop Slider Controls -->
-          <div class="controls slider__controls shop__slider-controls">
-            <button class="btn btn--control" type="button">
+          <!-- <div class="controls slider__controls shop__slider-controls"> -->
+            <button class="btn controls__btn controls__btn--prev" type="button">
               <span class="v-hidden">Prev</span>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="18" viewBox="0 0 10 18"><defs><path id="haeta" d="M26.155 2384.64l8.951-8.49c.211-.2.55-.2.76 0 .21.2.21.52 0 .72l-8.57 8.129 8.57 8.13c.21.2.21.52 0 .72a.556.556 0 0 1-.378.15.537.537 0 0 1-.378-.15l-8.951-8.491a.489.489 0 0 1-.004-.717z"/></defs><g><g transform="translate(-26 -2376)"><use fill="#333" xlink:href="#haeta"/></g></g></svg>
             </button>
-            <button class="btn btn--control" type="button">
+            <button class="btn controls__btn controls__btn--next" type="button">
               <span class="v-hidden">Next</span>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="18" viewBox="0 0 10 18"><defs><path id="1yx9a" d="M1413.845 2384.64l-8.951-8.49a.556.556 0 0 0-.76 0 .49.49 0 0 0 0 .72l8.57 8.129-8.57 8.13a.49.49 0 0 0 0 .72c.103.098.242.15.378.15a.537.537 0 0 0 .378-.15l8.951-8.491a.489.489 0 0 0 .004-.717z"/></defs><g><g transform="translate(-1404 -2376)"><use fill="#333" xlink:href="#1yx9a"/></g></g></svg>
             </button>
-          </div>
+          <!-- </div> -->
         </div>
         <div class="shop__link-wrap">
           <a class="btn btn--link shop__link" href="#">Show all</a>
